# unix_fall

03_TerminalProject/: Makefile  Show.c
04_Multifile/: Makefile
05_Environmental/: CMakeLists.txt  main.c
06_Debugging/: main.c
07_DebuggingTracing/: Makefile  README  lib.c
08_TestingCoverage/: configure.ac
08_TestingCoverage/src/: libbuf.c
08_TestingCoverage/tests/: tbuf_clear.ts  tbuf_grow_trunc.ts  tbuf_pop.ts  tbuf_push.ts
09_l18nL10n/: Makefile.am  README.md  configure.ac  header.pot  main.c
10_Documenting/: Doxyfile.in  Makefile.am  configure.ac  main.c  main.md.in  main.po
11_Toolkits/: Makefile  main.c
12_ScriptingText/: configure.ac
12_ScriptingText/src/: Makefile.am  buf.h  libbuf.c
12_ScriptingText/tests/: Makefile.am  tbuf_init.ts
13_PatchInstall/: Makefile.am  main.c  main.po
